crates/catalog/hadoop/tests/snapshots/hadoop_catalog_test__tests__hadoop_load_table-2.snap
---
source: crates/catalog/hadoop/tests/hadoop_catalog_test.rs
assertion_line: 253
expression: snapshot_content
---
+----+------+
| id | name |
+----+------+
| 3  | foo  |
| 4  | bar  |
+----+------+
