crates/catalog/hadoop/tests/snapshots/hadoop_catalog_test__tests__hadoop_load_table-3.snap
---
source: crates/catalog/hadoop/tests/hadoop_catalog_test.rs
assertion_line: 374
expression: snapshot_content
---
+----+------+
| id | name |
+----+------+
| 5  | foo  |
| 6  | bar  |
+----+------+
