crates/catalog/hadoop/tests/snapshots/hadoop_catalog_test__tests__hadoop_load_table.snap
---
source: crates/catalog/hadoop/tests/hadoop_catalog_test.rs
assertion_line: 203
expression: snapshot_content
---
+----+------+
| id | name |
+----+------+
| 1  | foo  |
| 2  | bar  |
+----+------+
